request formatting changes